Update BuildGeneratorAiService.java